Distribute gc_disclaim.h in single-obj-compilation (a cherry-pick of commit 056ad8279 from 'release-8_2')
Issue #389 (bdwgc).

This fixes installation of
gc_disclaim.h if --single-obj-compilation is passed to configure.

* Makefile.am [ENABLE_DISCLAIM] (pkginclude_HEADERS): Likewise.

--- a/Makefile.am
+++ b/Makefile.am
@@ -105,10 +105,13 @@ endif
 
 if ENABLE_DISCLAIM
 libgc_la_SOURCES += fnlz_mlc.c
-pkginclude_HEADERS += include/gc_disclaim.h
 endif
 
 ## End of !SINGLE_GC_OBJ
+endif
+
+if ENABLE_DISCLAIM
+pkginclude_HEADERS += include/gc_disclaim.h
 endif
 
 if USE_INTERNAL_LIBATOMIC_OPS
