Rename README.QUICK to LICENSE and install it by default
README.QUICK contains the package copyright and licensing terms, it is
more natural to name the file as LICENSE.

* CMakeLists.txt [enable_docs] (install): Add LICENSE for
$CMAKE_INSTALL_DOCDIR; remove note that README.QUICK is not installed.
* README.QUICK: Rename to LICENSE.
* Makefile.am (EXTRA_DIST): Do not add README.QUICK.
* README.md (Copyright & Warranty, Contributors): Rename README.QUICK
to LICENSE.
* doc/README.DGUX386: Refer to README.md instead of README.QUICK.
* doc/doc.am [ENABLE_DOCS] (dist_doc_DATA): Add LICENSE.

--- a/doc/doc.am
+++ b/doc/doc.am
@@ -14,6 +14,7 @@
 if ENABLE_DOCS
 dist_doc_DATA = \
         AUTHORS \
+        LICENSE \
         README.md \
         doc/README.DGUX386 \
         doc/README.Mac \
