--- a/include/include.am
+++ b/include/include.am
@@ -13,35 +13,35 @@
 # installed headers
 #
 pkginclude_HEADERS += \
-        include/gc.h \
-        include/gc_backptr.h \
-        include/gc_config_macros.h \
-        include/gc_inline.h \
-        include/gc_mark.h \
-        include/gc_tiny_fl.h \
-        include/gc_typed.h \
-        include/gc_version.h \
-        include/javaxfc.h \
-        include/leak_detector.h
+        include/gc/gc.h \
+        include/gc/gc_backptr.h \
+        include/gc/gc_config_macros.h \
+        include/gc/gc_inline.h \
+        include/gc/gc_mark.h \
+        include/gc/gc_tiny_fl.h \
+        include/gc/gc_typed.h \
+        include/gc/gc_version.h \
+        include/gc/javaxfc.h \
+        include/gc/leak_detector.h
 
 if ENABLE_DISCLAIM
-pkginclude_HEADERS += include/gc_disclaim.h
+pkginclude_HEADERS += include/gc/gc_disclaim.h
 endif
 
 if ENABLE_GCJ_SUPPORT
-pkginclude_HEADERS += include/gc_gcj.h
+pkginclude_HEADERS += include/gc/gc_gcj.h
 endif
 
 if PTHREADS
-pkginclude_HEADERS += include/gc_pthread_redirects.h
+pkginclude_HEADERS += include/gc/gc_pthread_redirects.h
 endif
 
 if CPLUSPLUS
 pkginclude_HEADERS += \
-        include/gc_allocator.h \
-        include/gc_cpp.h
+        include/gc/gc_allocator.h \
+        include/gc/gc_cpp.h
 
-include_HEADERS += include/extra/gc_cpp.h
+include_HEADERS += include/gc_cpp.h
 endif
 
 # headers which are not installed
@@ -64,4 +64,4 @@ dist_noinst_HEADERS += \
 
 # unprefixed header
 include_HEADERS += \
-        include/extra/gc.h
+        include/gc.h
