Remove doc.am and move gc.man to base folder (refactoring)
This is to eliminate non-dist-doc files in doc folder.

* CMakeLists.txt [enable_docs] (doc/gc.man): Rename to gc.man.
* Makefile.am [ENABLE_DOCS] (dist_man3_MANS): Likewise.
* Makefile.direct (BSD-pkg-install): Likewise.
* Makefile.am: Do not include doc/doc.am.
* Makefile.am [ENABLE_DOCS] (dist_doc_DATA, dist_man3_MANS): Copy
assignment from doc.am.
* doc/doc.am: Remove.
* doc/gc.man: Rename to gc.man.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -730,8 +730,7 @@ if (enable_docs)
             PATTERN "README.*"
             PATTERN "*.md")
 
-  install(FILES doc/gc.man DESTINATION "${CMAKE_INSTALL_MANDIR}/man3"
-          RENAME gc.3)
+  install(FILES gc.man DESTINATION "${CMAKE_INSTALL_MANDIR}/man3" RENAME gc.3)
 endif(enable_docs)
 
 # CMake config/targets files.
