--- a/.travis.yml
+++ b/.travis.yml
@@ -339,14 +339,23 @@ jobs:
     env:
     - CONF_CFLAGS="-D AO_USE_PTHREAD_DEFS"
     - CONF_OPTIONS="--without-libatomic-ops --enable-gc-assertions --enable-cplusplus --enable-static"
+  - compiler: clang
+    env:
+    - CONF_CFLAGS="-D AO_USE_PTHREAD_DEFS"
+    - CONF_OPTIONS="--without-libatomic-ops"
   - addons:
       apt:
         packages:
         - libatomic-ops-dev
+    compiler: gcc
+    env:
+    - CONF_CFLAGS="-D AO_USE_PTHREAD_DEFS"
+    - CONF_OPTIONS="--with-libatomic-ops=yes --enable-cplusplus"
+    - NO_CLONE_LIBATOMIC_OPS=true
     compiler: clang
     env:
     - CONF_CFLAGS="-D AO_USE_PTHREAD_DEFS"
-    - CONF_OPTIONS="--with-libatomic-ops=yes --enable-gc-assertions --enable-cplusplus --enable-static"
+    - CONF_OPTIONS="--with-libatomic-ops=yes --enable-gc-assertions --enable-cplusplus --disable-shared --enable-static"
     - NO_CLONE_LIBATOMIC_OPS=true
   - compiler: gcc
     env:
