Fix nodist_libgc_la_SOURCES value in Makefile.am for Solaris/sparc
* Makefile.am [NEED_ATOMIC_OPS_ASM] (nodist_libgc_la_SOURCES): Append
atomic_ops_sysdeps.S instead of overwriting atomic_ops.c item (and
only if USE_INTERNAL_LIBATOMIC_OPS).

--- a/Makefile.am
+++ b/Makefile.am
@@ -80,10 +80,9 @@ endif
 
 if USE_INTERNAL_LIBATOMIC_OPS
 nodist_libgc_la_SOURCES = libatomic_ops/src/atomic_ops.c
-endif
-
 if NEED_ATOMIC_OPS_ASM
-nodist_libgc_la_SOURCES = libatomic_ops/src/atomic_ops_sysdeps.S
+nodist_libgc_la_SOURCES += libatomic_ops/src/atomic_ops_sysdeps.S
+endif
 endif
 
 # Include THREADDLLIBS here to ensure that the correct versions of
